# eventsAPI

./: .env  Makefile  README.md  main.py  pyproject.toml  requirements.txt
api/: events_api.py  router.py
assets/xml/: mock_response_09.xml  mock_response_10.xml  mock_response_11.xml
models/: errors.py  events.py  queries.py  responses.py
providers/: fake_provider.py  fake_responses.py
tests/: test_api.py  test_data.py  test_eventapifever.py  test_fake_provider.py  test_formatter.py  test_utils.py  test_validator.py  test_xml_parser.py
utils/: constants.py  formatter.py  remove_errors.py  validator.py  xml_parser.py
