[tool.poetry]
name = "EventAPIFever"
version = "0.1.0"
description = "This is a Python based API to retrieve events information from an external provider."
authors = ["Carlos Jiménez <carlosjimz87@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
requests = "^2.25.1"
uvicorn = "^0.13.3"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.7.0"
autopep8 = "^1.5.5"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
